crates/keron-lang/tests/corpus/errors/check/user_fn_collides_with_symlink_builtin.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `symlink` is already defined
  --> 1:4
  |
1 | fn symlink(): Int { 1 }
  |    ^^^^^^^
